WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135343
Web Replay: auto-decoding of parameterized vector's elements is incorrect
https://bugs.webkit.org/show_bug.cgi?id=135343
Summary
Web Replay: auto-decoding of parameterized vector's elements is incorrect
Brian Burg
Reported
2014-07-28 11:14:10 PDT
splitting from a much larger patch
Attachments
Patch
(2.71 KB, patch)
2014-07-28 11:25 PDT
,
Brian Burg
no flags
Details
Formatted Diff
Diff
Patch
(9.72 KB, patch)
2014-07-28 11:28 PDT
,
Brian Burg
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Brian Burg
Comment 1
2014-07-28 11:25:00 PDT
Created
attachment 235599
[details]
Patch
Brian Burg
Comment 2
2014-07-28 11:25:56 PDT
Comment on
attachment 235599
[details]
Patch wrong patch. i hate you, webkit-patch
Brian Burg
Comment 3
2014-07-28 11:28:54 PDT
Created
attachment 235602
[details]
Patch
Timothy Hatcher
Comment 4
2014-07-28 11:49:26 PDT
Comment on
attachment 235602
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=235602&action=review
> Source/JavaScriptCore/replay/scripts/tests/expected/generate-input-with-vector-members.json-TestReplayInputs.cpp:61 > +SavedHistory::~SavedHistory() > +{ > +} > } // namespace Test
A newline before the namespace close would be nice.
> Source/JavaScriptCore/replay/scripts/tests/expected/generate-input-with-vector-members.json-TestReplayInputs.h:91 > +}; > } // namespace Test
Ditto.
Brian Burg
Comment 5
2014-07-28 11:51:33 PDT
Comment on
attachment 235602
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=235602&action=review
>> Source/JavaScriptCore/replay/scripts/tests/expected/generate-input-with-vector-members.json-TestReplayInputs.cpp:61 >> } // namespace Test > > A newline before the namespace close would be nice.
right now it uses tight namespace spacing on both sides. It could be changed, but since there are many explicit namespaces i opted for the more condensed style.
WebKit Commit Bot
Comment 6
2014-07-28 12:31:27 PDT
Comment on
attachment 235602
[details]
Patch Clearing flags on attachment: 235602 Committed
r171684
: <
http://trac.webkit.org/changeset/171684
>
WebKit Commit Bot
Comment 7
2014-07-28 12:31:30 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug